Sun Dec 12 22:45:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (ID_H_INCLUDES): now id.h depends on vm_opts.h.

Sun Dec 12 20:42:47 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* template/id.h.tmpl: suppress all warning: "SUPPORT_JOKE" is not
	  defined.  [ruby-dev:42730]

Sun Dec 12 20:35:07 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* misc/rb_optparse.zsh: update how to install.

	* misc/rb_optparse.zsh: avoid error when setopt noclobber.

	* lib/optparse.rb: fix typo. pointed out at
	  <http://d.hatena.ne.jp/nagachika/20101207>.

Sun Dec 12 13:27:35 2010  Tanaka Akira  <akr@fsij.org>

	* eval_error.c: parenthesize macro arguments.

Sun Dec 12 11:53:24 2010  Tanaka Akira  <akr@fsij.org>

	* error.c: parenthesize macro arguments.

Sun Dec 12 04:01:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): fix: extra back slash is added when
	  the string is dummy encoding and includes \x22 or \x5C.

Sun Dec 12 02:42:24 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/openssl/ossl_asn1.c: indefinite length BER to DER encoding is
	  properly supported.  Thanks Martin Bosslet! [ruby-core:33082]

Sat Dec 11 17:43:34 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/bigdecimal/bigdecimal.h: suppress "warning: 'VPrint' declared
	  'static' but never defined".

Sat Dec 11 09:24:57 2010  Tanaka Akira  <akr@fsij.org>

	* encoding.c: parenthesize macro arguments.

Sat Dec 11 08:12:48 2010  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl.c, ext/openssl/ossl_pkey_rsa.c: Document RSA, RSA
	  encryption/decryption and PKCS #5 encryption/decryption.

Sat Dec 11 06:23:41 2010  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/ossl_x509name.c: include Comparable to provide #==.
	  Document OpenSSL::X509::Name#<=>.  [Ruby 1.9-Feature#4116]

Sat Dec 11 05:48:28 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: infinite loop on method_missing at loading.
	  [ruby-dev:42716] [Ruby 1.9-Bug#4129]
